# template-rust-redpanda

./: .cargo-ignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  TEMPLATE_README.md  cargo-generate.toml  docker-compose.yml  justfile  test.sh
examples/: multi_topic_example.md
src/: lib.rs  main.rs
src/api/: handlers.rs  routes.rs
src/config/: mod.rs
src/domains/: mod.rs
src/domains/bounded_context_1/: mod.rs  models.rs  topic_handler.rs
src/domains/bounded_context_2/: mod.rs  models.rs  topic_handler.rs
src/domains/logistics/: event_handlers.rs  mod.rs  topic_handler.rs
src/domains/order/: api.rs  event_handlers.rs  mod.rs  topic_handler.rs
src/events/: mod.rs  processor.rs
src/infrastructure/: mod.rs  redpanda.rs
src/shared/: mod.rs  models.rs
