[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.6", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

{% if use_redpanda %}
rdkafka = { version = "0.35", features = ["cmake-build"] }
{% endif %}